public/css/style.css
body {
    margin: 0;
    padding: 0;
    background-image: url(https://images.pexels.com/photos/4318922/pexels-photo-4318922.jpeg?auto=compress&cs=tinysrgb&w=1600);
    background-size: cover;
    font-family: sans-serif;
}
#home-icon {
    max-width: 5em;
    max-height: 5em;
}
#home-title {
    display: flex;
    flex: center;
    width: 90%;
    justify-content: center;
    align-items: center;
    color: rgb(64, 113, 159);
}
#add-link {
    display: flex;
    flex: end;
}
#add-button {
    max-width: 5em;
    max-height: 5em;
}
#items-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: rgb(255, 255, 255, .8);
    margin: 2em;
    border-radius: 2em;
}
img{
    width: 300px;
    height: 200px;
}
#item-container {
    display: inline-flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin: 3em;
    padding: 1em;
    color:rgb(64, 113, 159);
    font-weight: 900;
}
nav {
    display: flex;
    background-color: white;
}
a {
    text-decoration: none;
    color:rgb(64, 113, 159);
}
#image-box {
    width: 700px;
    height: 400px;
    margin: 1em;
}
#map-box {
    width: 700px;
    height: 400px;
    margin: 1em;
}
#form-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: rgb(255, 255, 255, .8);
    margin: 2em;
    border-radius: 2em;
    font-size: 2em;
    color:rgb(64, 113, 159)
}

